@@ -2,6 +2,7 @@
 
 import json
 from pip.utils import get_installed_distributions
+from pip._vendor.six import print_
 
 packages = []
 
@@ -11,8 +12,8 @@ for dist in get_installed_distributions():
             "name": dist.project_name,
             "version": dist.version,
             "location": dist.location,
-            "dependencies": map(lambda dependency: dependency.project_name, dist.requires())
+            "dependencies": list(map(lambda dependency: dependency.project_name, dist.requires()))
         }
     )
 
-print json.dumps(packages)
+print_(json.dumps(packages))
